<resources>
    <string name="app_name">SkilledServiceApp</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--LoginFragment-->
    <string name="label_login">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="do_not_have_an_account">Don\'t have an account?</string>

    <!--Signup Fragment-->
    <string name="i_am_a_worker">I am a Worker :</string>
    <string name="label_registration">Registration</string>
    <string name="hint_name">Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="have_an_account">Have an account?</string>

   <!--Skills Fragment-->
    <string name="select_your_skill">Select your skill</string>

    <!--Request Task Fragment-->
    <string name="request_service">Request a service</string>
    <string name="select_worker">Select worker</string>
    <string name="request_has_been_sent">Request has been sent.</string>

    <!--Actions/Button-->
    <string name="action_login">Login</string>
    <string name="action_signup">SignUp</string>
    <string name="action_close">Close</string>
    <string name="action_save">Save</string>
    <string name="action_send_request">Send Request</string>
    <string name="action_cancel_task">Cancel Task</string>
    <string name="action_accept_task">Accept Task</string>
    <string name="action_task_completed">Completed</string>

    <!--error string-->
    <string name="error_username_password_incorrect">Username or Password is incorrect.</string>
    <string name="error_oops_something_went_wrong">Oops!! Something went wrong.</string>
    <string name="error_please_enter_proper_name">Please enter proper name.</string>
    <string name="error_username_already_exists">Username already exists.</string>
    <string name="error_username_length">Username should be 6\-16 characters long.</string>
    <string name="error_password_length">Password should be 6\-16 characters long.</string>
    <string name="error_confirm_password">Password does not match.</string>
    <string name="error_registration_failed">Registration failed!!</string>
    <string name="error_already_sent_request">You have already requested this worker!!</string>
    <string name="error_no_task_info_available">Task info not available.</string>
    <string name="error_no_one_is_available_to_pick_the_task">No one is available to pick the task</string>
    <string name="error_operation_can_not_be_performed">Operation can\'t be performed at the moment.</string>

    <!--Task Card-->
    <string name="request_new_task">Request a task</string>

    <!--Dialog-->
    <string name="rate_your_experience">Rate your experience</string>
</resources>
