<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/margin_12"
        android:layout_marginEnd="@dimen/margin_12"
        android:background="@drawable/bg_login_layout"
        android:elevation="5dp"
        android:orientation="vertical"
        android:outlineProvider="bounds"
        android:paddingBottom="@dimen/margin_12">

        <android.support.v7.widget.AppCompatTextView
            style="@style/style_heading_label"
            android:layout_width="match_parent"
            android:background="@color/background_color"
            android:paddingTop="@dimen/margin_8"
            android:paddingBottom="@dimen/margin_8"
            android:text="@string/label_login"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_22" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:orientation="vertical"
            android:paddingStart="@dimen/margin_8"
            android:paddingEnd="@dimen/margin_8">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/background_color" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_12"
                android:theme="@style/TextInputLayout"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/background_color" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                style="@style/style_label"
                android:textColor="@color/action_color"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:textSize="@dimen/text_size_16"
                android:layout_marginStart="@dimen/margin_12"
                android:text="@string/do_not_have_an_account" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/action_signup"
                style="@style/style_action"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/action_height_small"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/margin_12"
                android:paddingStart="@dimen/margin_8"
                android:paddingEnd="@dimen/margin_8"
                android:text="@string/action_signup"
                android:textSize="@dimen/text_size_14" />

        </RelativeLayout>

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/action_login"
        style="@style/style_action"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/action_login" />
</RelativeLayout>